Añadidos requests y claves de la API

--- a/html/index.html
+++ b/html/index.html
@@ -47,6 +47,7 @@
         </div>
     </footer>
 
-    
+    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/requests/request-food-parser.js"></script>
 </body>
 </html>
