--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous">
+    </script>
     <script src="https://kit.fontawesome.com/712575d4a5.js"
     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
