Diseño responsivo para la vista de búsqueda

--- a/html/search.html
+++ b/html/search.html
@@ -45,8 +45,12 @@
             <h4 class="searching-for">Searching results for:</h4>
 
             <div class="search-results">
-                <h3 class="search-query">"Hamburger"</h3>
-                <h4 class="search-n-results">290 results</h4>
+                <h3 class="search-query">‒</h3>
+                <h4 class="search-n-results">0 results</h4>
+            </div>
+
+            <div class="search-filters-more">
+                <button class="btn-text" id="show-more-filters">Show filters</button>
             </div>
 
             <div class="search-filters-list">
