Cambio de cantidad de productos en el carrito y actualización de precios

--- a/html/cart.html
+++ b/html/cart.html
@@ -49,6 +49,12 @@
         </div>
         <section class="cart-products">
         </section>
+        <section class="cart-total">
+            <div class="cart-total-container">
+                <h2 class="cart-total-label">TOTAL</h2>
+                <h2 class="cart-total-price">$0.00</h2>
+            </div>
+        </section>
     </div>
 
     <!-- FOOTER -->
