--- a/html/acercade.html
+++ b/html/acercade.html
@@ -44,7 +44,7 @@
             </nav>
         </div>
     </div>
-    
+
     <!-- BODY -->
     <div class="container container-body">
         <!-- ASIDE -->
@@ -65,7 +65,7 @@
             </div>
             <div class="frase">
                 <p>
-                    Frequently asked questions are usually the fastest way 
+                    Frequently asked questions are usually the fastest way
                 </p>
                 <p>
                     to get answers to your questions.
@@ -73,7 +73,7 @@
                 <p>
                     Learn how to use the features ProDiet offers by visiting our Frequently Asked Questions.                </p>
                 <p>
-                    If your answer is not available in our 
+                    If your answer is not available in our
                 </p>
                 <p>
                     help articles.
@@ -81,7 +81,7 @@
             </div>
             <div class="contacto-subtitle">
                 <p>
-                    Contac email
+                    Contact email
                 </p>
             </div>
             <div class="frase">
@@ -106,7 +106,7 @@
             </div>
             <div class="frase">
                 <p>
-                    Do you have an opinion or success story to share? 
+                    Do you have an opinion or success story to share?
                 </p>
                 <p>
                     We would love to hear it! Help that
@@ -122,7 +122,6 @@
             </div>
             <div id="mapid"></div>
         </div>
-        
     </div>
 
     <!-- FOOTER -->
