--- a/html/share.html
+++ b/html/share.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://kit.fontawesome.com/712575d4a5.js" 
+    <script src="https://kit.fontawesome.com/712575d4a5.js"
     crossorigin="anonymous"></script>
     <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -19,7 +19,7 @@
 </head>
 <body>
     <!-- HEADER -->
-    <div class="navbar">
+    <header class="navbar">
         <div class="flex-nav">
             <div class="nav-header">
                 <a href="/html/index.html">
@@ -40,8 +40,8 @@
                 </ul>
             </nav>
         </div>
-    </div>
-    
+    </header>
+
     <!-- BODY -->
     <div class="container container-body">
         <!-- ASIDE -->
