--- a/html/index.html
+++ b/html/index.html
@@ -24,13 +24,12 @@
 </head>
 <body>
     <!-- HEADER -->
-    <div class="navbar">
+    <header class="navbar">
         <div class="flex-nav">
             <div class="nav-header">
                 <a href="/html/index.html">
                     <img class="logo" src="/img/whitelogo.png" alt="logo">
                 </a>
-                
                 <button class="nav-toggle" id= "navToggle">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -46,8 +45,8 @@
                 </ul>
             </nav>
         </div>
-    </div>
-    
+    </header>
+
     <!-- BODY -->
     <div class="container container-body">
         <!-- ASIDE -->
