--- a/html/share.html
+++ b/html/share.html
@@ -53,11 +53,8 @@
             <div class="encuesta-content">
                 <form enctype="text/plain" id="share-form" action="mailto:chazita9@gmail.com">
                 
-                    <label for="nombre" class="encuesta-label">Title</label>
-                    <input type="text" id="nombre">
-
                     <label for="nombre" class="encuesta-label">Hello message</label>
-                    <input type="text" id="hello-menssage" name="hello-message" value="Hello dear friend I want you to take a look at this food!!">
+                    <input type="text" id="hello-menssage" name="hello-message" value="">
                     
                     <label for="mail-emisor" class="encuesta-label">Receiving email</label>
                     <input type="email" id="email" name="email">
