Diseño del navbar

--- a/html/acercade.html
+++ b/html/acercade.html
@@ -20,10 +20,10 @@
     crossorigin=""/>
     <title>Document</title>
 </head>
-<body>
+<body class="body-background">
     <!-- HEADER -->
-    <div class="navbar">
-        <div class="flex-nav">
+    <header class="navbar">
+        <div class="flex-nav container">
             <div class="nav-header">
                 <a href="/html/index.html">
                     <img class="logo" src="/img/whitelogo.png" alt="logo">
@@ -43,7 +43,7 @@
                 </ul>
             </nav>
         </div>
-    </div>
+    </header>
 
     <!-- BODY -->
     <div class="container container-body">
