--- a/html/index.html
+++ b/html/index.html
@@ -22,10 +22,10 @@
     crossorigin=""/>
     <title>Prodiet</title>
 </head>
-<body>
+<body class="body-background">
     <!-- HEADER -->
     <header class="navbar">
-        <div class="flex-nav">
+        <div class="flex-nav container">
             <div class="nav-header">
                 <a href="/html/index.html">
                     <img class="logo" src="/img/whitelogo.png" alt="logo">
