--- a/html/recipe.html
+++ b/html/recipe.html
@@ -20,7 +20,7 @@
 <body>
     <!-- HEADER -->
     <header class="navbar">
-        <div class="flex-nav">
+        <div class="flex-nav container">
             <div class="nav-header">
                 <a href="/html/index.html">
                     <img class="logo" src="/img/whitelogo.png" alt="logo">
