Búsqueda en la navbar

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,7 @@
                 </button>
             </div>
             <div class="buscar-nav">
-                <input type="text" placeholder="Search, food and more..." required>
+                <input type="text" placeholder="Search, food and more..." id="search-bar" required>
             </div>
             <nav class="nav-links" id="nav-links">
                 <ul>
@@ -96,5 +96,6 @@
     </footer>
 
     <script type="module" src="/js/main.js"></script>
+    <script src="/js/searchbar.js"></script>
 </body>
 </html>
