--- a/html/acercade.html
+++ b/html/acercade.html
@@ -33,7 +33,7 @@
                 </button>
             </div>
             <div class="buscar-nav">
-                <input type="text" placeholder="Search, food and more..." required>
+                <input type="text" placeholder="Search, food and more..." id="search-bar" required>
             </div>
             <nav class="nav-links" id="nav-links">
                 <ul>
@@ -134,5 +134,6 @@
     </footer>
 
     <script src="/js/main.js"></script>
+    <script src="/js/searchbar.js"></script>
 </body>
 </html>
