--- a/html/cart.html
+++ b/html/cart.html
@@ -30,7 +30,7 @@
                 </button>
             </div>
             <div class="buscar-nav">
-                <input type="text" placeholder="Search, food and more..." required>
+                <input type="text" placeholder="Search, food and more..." id="search-bar" required>
             </div>
             <nav class="nav-links" id="nav-links">
                 <ul>
@@ -71,5 +71,6 @@
     </footer>
 
     <script type="module" src="/js/cart.js"></script>
+    <script src="/js/searchbar.js"></script>
 </body>
 </html>
