Añadir recetas al historial

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
     crossorigin=""/>
     <title>Prodiet</title>
 </head>
-<body class="body-background">
+<body>
     <!-- HEADER -->
     <header class="navbar">
         <div class="flex-nav container">
@@ -47,37 +47,18 @@
         </div>
     </header>
 
-    <!-- BODY -->
-    <div class="container container-body">
-        <!-- ASIDE -->
-        <div>
-
-        </div>
-        <!-- CONTENT-->
-        <div class="input-buscar-container">
-            <div class="eslogan">
-                <p>
-                    Your physical health
-                </p>
-                <p>
-                    starts with
-                </p>
-                <p>
-                    what you eat.
-                </p>
+    <div class="container-index">
+        <!-- BODY -->
+        <section class="container-body">
+            <!-- CONTENT-->
+            <div class="container container-index-text">
+                <h2 class="hero-title">Your physical health starts with what you eat.</h2>
+                <p class="hero-subtitle">Take control of your goals. Track calories and ingredients with MyProDiet.</p>
             </div>
-            <div class="frase">
-                <p>
-                    Take control of your goals. Record the
-                </p>
-                <p>
-                    calories, and the breakdown of ingredients
-                </p>
-                <p>
-                    with MyProDiet.
-                </p>
-            </div>
-        </div>
+        </section>
+        <section class="container container-index-history">
+            <h2 class="section-title">My history</h2>
+        </section>
     </div>
 
     <!-- FOOTER -->
@@ -85,6 +66,7 @@
         <div class="container-footer">
             <p>Matías Gabriel Busum Fradera, Facundo Ariel Chazarreta.</p>
             <p>UNAJ. Aplicaciones móviles 2C 2021.</p>
+            <br>
             <p>GM © 2021 GamesMaster. Todos los derechos reservados.</p>
         </div>
     </footer>
