Añadido el historial al index

--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,10 @@
             </div>
         </section>
         <section class="container container-index-history">
-            <h2 class="section-title">My history</h2>
+            <h2 class="section-title">Recently viewed</h2>
+            <div class="history-content">
+
+            </div>
         </section>
     </div>
 
@@ -71,7 +74,7 @@
         </div>
     </footer>
 
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/index.js"></script>
     <script src="/js/searchbar.js"></script>
 </body>
 </html>
