--- a/html/acercade.html
+++ b/html/acercade.html
@@ -85,7 +85,7 @@
                 </p>
             </div>
             <div class="frase">
-                <p>
+                <p><i class="fas fa-envelope-square"></i>
                     ProDiet@gmail.com.ar
                 </p>
             </div>
@@ -95,8 +95,8 @@
                 </p>
             </div>
             <div class="frase">
-                <p>
-                    42269065
+                <p><span class="fas fa-phone-alt" ></span>
+                    4226-9065
                 </p>
             </div>
             <div class="contacto-subtitle">
@@ -113,6 +113,39 @@
                 </p>
                 <p>
                     ProDiet is better for everyone.
+                </p>
+            </div>
+            <div class="contacto-subtitle">
+                <p>
+                    Developers
+                </p>
+            </div>
+            <div class="developers-title">
+                <p>
+                    Matias Gabriel Busum Fradera
+                </p>
+            </div>
+            <div class="frase">
+                <p><i class="fas fa-envelope-square"></i>
+                    matibf99@gmail.com
+                </p>
+                <p><span class="fas fa-phone-alt" ></span>
+                    +54 9 11 2526-5854
+                </p>
+
+            </div>
+            <div class="developers-title">
+                <p>
+                    Facundo Ariel Chazarreta
+                </p>
+            </div>
+            <div class="frase">
+                <p><i class="fas fa-envelope-square"></i>
+                    facundochaza@hotmail.com
+                </p>
+                
+                <p><span class="fas fa-phone-alt" ></span>
+                    +54 9 11 3195-7944
                 </p>
             </div>
             <div class="contacto-ubicacion">
