--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li class="nav-link"><a href="#">FOOD</a></li>
                     <li class="nav-link"><a href="#">DIET</a></li>
-                    <li class="nav-link"><a href="/html/acercade.html">CONTACT</a></li>
+                    <li class="nav-link"><a href="/html/about-us.html">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
