--- a/html/about-us.html
+++ b/html/about-us.html
@@ -46,7 +46,7 @@
     </header>
 
     <!-- BODY -->
-    <div class="container container-body">
+    <div class="container">
         <!-- ASIDE -->
         <div>
 
