Fix de errores en la búsqueda

--- a/html/search.html
+++ b/html/search.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="search-filter" id="calories">
-                    <h4 class="filter-title">Calories</h4>
+                    <h4 class="filter-title">Calories per serving</h4>
                     <div class="filter-min-max">
                         <input type="text" placeholder="min" class="filter-input" id="cal-min">
                         ‒
