Rediseño de la vista de index y acerca de nosotros

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -20,7 +20,7 @@
     crossorigin=""/>
     <title>Document</title>
 </head>
-<body class="body-background">
+<body>
     <!-- HEADER -->
     <header class="navbar">
         <div class="flex-nav container">
@@ -47,10 +47,6 @@
 
     <!-- BODY -->
     <div class="container">
-        <!-- ASIDE -->
-        <div>
-
-        </div>
         <!-- CONTENT-->
         <div class="contacto">
             <div class="contacto-title">
@@ -65,18 +61,7 @@
             </div>
             <div class="frase">
                 <p>
-                    Frequently asked questions are usually the fastest way
-                </p>
-                <p>
-                    to get answers to your questions.
-                </p>
-                <p>
-                    Learn how to use the features ProDiet offers by visiting our Frequently Asked Questions.                </p>
-                <p>
-                    If your answer is not available in our
-                </p>
-                <p>
-                    help articles.
+                    Contact us to solve any problems you may have while using this site.
                 </p>
             </div>
             <div class="contacto-subtitle">
@@ -109,10 +94,7 @@
                     Do you have an opinion or success story to share?
                 </p>
                 <p>
-                    We would love to hear it! Help that
-                </p>
-                <p>
-                    ProDiet is better for everyone.
+                    We would love to hear it!
                 </p>
             </div>
             <div class="contacto-subtitle">
@@ -143,7 +125,6 @@
                 <p><i class="fas fa-envelope-square"></i>
                     facundochaza@hotmail.com
                 </p>
-                
                 <p><span class="fas fa-phone-alt" ></span>
                     +54 9 11 3195-7944
                 </p>
@@ -166,7 +147,7 @@
         </div>
     </footer>
 
-    <script src="/js/main.js"></script>
+    <script src="/js/contact.js"></script>
     <script src="/js/searchbar.js"></script>
 </body>
 </html>
