--- a/html/index.html
+++ b/html/index.html
@@ -39,8 +39,6 @@
             </div>
             <nav class="nav-links" id="nav-links">
                 <ul>
-                    <li class="nav-link"><a href="#">FOOD</a></li>
-                    <li class="nav-link"><a href="#">DIET</a></li>
                     <li class="nav-link"><a href="/html/about-us.html">CONTACT</a></li>
                 </ul>
             </nav>
@@ -49,9 +47,9 @@
 
     <div class="container-index">
         <!-- BODY -->
-        <section class="container-body">
+        <section class="container-body container">
             <!-- CONTENT-->
-            <div class="container container-index-text">
+            <div class="container-index-text">
                 <h2 class="hero-title">Your physical health starts with what you eat.</h2>
                 <p class="hero-subtitle">Take control of your goals. Track calories and ingredients with MyProDiet.</p>
             </div>
