Nuevo diseño de navbar y footer

--- a/html/search.html
+++ b/html/search.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
-    <title>Prodiet</title>
+    <title>Search results - Prodiet</title>
 </head>
 <body>
     <!-- HEADER -->
@@ -210,10 +210,11 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="container">
+        <div class="container-footer">
             <p>Matías Gabriel Busum Fradera, Facundo Ariel Chazarreta.</p>
             <p>UNAJ. Aplicaciones móviles 2C 2021.</p>
-            <p>GM © 2021 GamesMaster. Todos los derechos reservados.</p>
+            <br>
+            <p>© 2021 Prodiet. Todos los derechos reservados.</p>
         </div>
     </footer>
 
