Diseño del index e indicadores de historial y búsqueda vacíos

--- a/html/index.html
+++ b/html/index.html
@@ -62,10 +62,9 @@
                 <p class="hero-subtitle">Take control of your goals. Track calories and ingredients with MyProDiet.</p>
             </div>
         </section>
-        <section class="container container-index-history">
+        <section class="container-index-history container">
             <h2 class="section-title">Recently viewed</h2>
             <div class="history-content">
-
             </div>
         </section>
     </div>
