--- a/html/search.html
+++ b/html/search.html
@@ -20,25 +20,31 @@
 <body>
     <!-- HEADER -->
     <header class="navbar">
-        <div class="flex-nav container">
+        <div class="container flex-nav">
             <div class="nav-header">
                 <a href="/html/index.html">
-                    <img class="logo" src="/img/whitelogo.png" alt="logo">
+                    <img class="logo" src="/img/logo.png" alt="logo">
                 </a>
                 <button class="nav-toggle" id= "navToggle">
                     <i class="fas fa-bars"></i>
                 </button>
             </div>
             <div class="buscar-nav">
-                <input type="text" placeholder="Search, food and more..." id="search-bar" required>
+                <input type="text" placeholder="Search food by name, ingredients and more..." id="search-bar" required>
+                <button class="buscar-nav-btn">
+                    <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                    </svg>
+                </button>
             </div>
-            <nav class="nav-links" id="nav-links">
-                <ul>
-                    <li class="nav-link"><a href="#">FOOD</a></li>
-                    <li class="nav-link"><a href="#">DIET</a></li>
-                    <li class="nav-link"><a href="/html/about-us.html">CONTACT</a></li>
-                </ul>
-            </nav>
+            <div class="nav-links">
+                <a href="./about-us.html" class="nav-link">CONTACT</a>
+                <a href="./cart.html" class="nav-link">
+                    <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M17,18A2,2 0 0,1 19,20A2,2 0 0,1 17,22C15.89,22 15,21.1 15,20C15,18.89 15.89,18 17,18M1,2H4.27L5.21,4H20A1,1 0 0,1 21,5C21,5.17 20.95,5.34 20.88,5.5L17.3,11.97C16.96,12.58 16.3,13 15.55,13H8.1L7.2,14.63L7.17,14.75A0.25,0.25 0 0,0 7.42,15H19V17H7C5.89,17 5,16.1 5,15C5,14.65 5.09,14.32 5.24,14.04L6.6,11.59L3,4H1V2M7,18A2,2 0 0,1 9,20A2,2 0 0,1 7,22C5.89,22 5,21.1 5,20C5,18.89 5.89,18 7,18M16,11L18.78,6H6.14L8.5,11H16Z" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </header>
 
