Publicidad y contacto terminado

--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,16 @@
                 <p class="hero-subtitle">Take control of your goals. Track calories and ingredients with MyProDiet.</p>
             </div>
         </section>
+        <section class="container container-banner">
+            <div class="slider">
+                <ul>
+                    <li><img src="/img/RickMortyBanner.png" alt=""></li>
+                    <li><img src="/img/PocoBanner.png" alt=""></li>
+                    <li><img src="/img/HarryBanner.png" alt=""></li>
+                </ul>
+
+            </div>
+        </section>
         <section class="container-index-history container">
             <div class="section-title-container">
                 <h2 class="section-title">Recently viewed</h2>
