Arreglo de bugs

--- a/html/search.html
+++ b/html/search.html
@@ -147,6 +147,12 @@
                     <div class="filter-checkbox">
                         <div>
                             <input type="checkbox" name="chinese" id="chinese">
+                            <label for="chinese">Chinese</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="chinese" id="chinese">
                             <label for="chinese">Central Europe</label>
                         </div>
                     </div>
@@ -172,6 +178,48 @@
                         <div>
                             <input type="checkbox" name="japanese" id="japanese">
                             <label for="japanese">Japanese</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="kosher" id="kosher">
+                            <label for="kosher">Kosher</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="mediterranean" id="mediterranean">
+                            <label for="mediterranean">Mediterranean</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="mexican" id="mexican">
+                            <label for="mexican">Mexican</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="middle-eastern" id="middle-eastern">
+                            <label for="middle-eastern">Middle Eastern</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="nordic" id="nordic">
+                            <label for="nordic">Nordic</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="south-american" id="south-american">
+                            <label for="south-american">South American</label>
+                        </div>
+                    </div>
+                    <div class="filter-checkbox">
+                        <div>
+                            <input type="checkbox" name="south-east-asian" id="south-east-asian">
+                            <label for="south-east-asian">South East Asian</label>
                         </div>
                     </div>
                 </div>
