--- a/html/share.html
+++ b/html/share.html
@@ -60,18 +60,17 @@
                 <div class="contact-form">
                     <form enctype="text/plain" id="share-form" action="mailto:chazita9@gmail.com">
                         <p class="block">
-                            <label for="nombre" class="encuesta-label">Hello message</label>
-                            <input type="text" id="hello-menssage" name="hello-message" value="" >
+                            <label for="hello-message" class="encuesta-label">Product details</label>
+                            <textarea name="hello-message" rows="3" id="hello-menssage"></textarea>
                         </p>
                         <p class="block">
                             <label for="mail-emisor" class="encuesta-label">Receiving email</label>
                             <input type="email" id="email" name="email">
                             <label for="nombre" class="encuesta-field-invalid invisible" id="invalid-mail">* The "email" field must not be empty and must have a suitable format</label>
                         </p>
-                        
                         <p class="block">
                             <label for="comentario" class="encuesta-label">Comment</label>
-                            <input type="text" id="comentario" name="comentario">       
+                            <input type="text" id="comentario" name="comentario">
                         </p>
                         <p>
                             <button class="btn-filled" type="button" id="btn-cancelar">CANCEL</button>
@@ -79,7 +78,6 @@
                         <p>
                             <button class="btn-filled btn-filled-blue" type="submit" id="button-send">SEND</button>
                         </p>
-                        
                     </form>
                     <a href="mailto:chazita9@gmail.com" id="eventSendMail">mail</a>
                 </div>
