--- a/html/share.html
+++ b/html/share.html
@@ -61,16 +61,16 @@
                     <form enctype="text/plain" id="share-form" action="mailto:chazita9@gmail.com">
                         <p class="block">
                             <label for="hello-message" class="encuesta-label">Product details</label>
-                            <textarea name="hello-message" rows="3" id="hello-menssage"></textarea>
+                            <textarea name="hello-message" rows="2" id="hello-menssage"></textarea>
                         </p>
                         <p class="block">
                             <label for="mail-emisor" class="encuesta-label">Receiving email</label>
                             <input type="email" id="email" name="email">
-                            <label for="nombre" class="encuesta-field-invalid invisible" id="invalid-mail">* The "email" field must not be empty and must have a suitable format</label>
+                            <label for="nombre" class="encuesta-field-invalid invisible" id="invalid-mail">*The "email" field must not be empty and must have a suitable format</label>
                         </p>
                         <p class="block">
                             <label for="comentario" class="encuesta-label">Comment</label>
-                            <input type="text" id="comentario" name="comentario">
+                            <textarea name="comentario" rows="2" id="comentario"></textarea>
                         </p>
                         <p>
                             <button class="btn-filled" type="button" id="btn-cancelar">CANCEL</button>
@@ -90,9 +90,9 @@
                         <li><i class="fas fa-envelope-open-text"></i> ProDiet@gmail.com.ar</li>
                     </ul>
                     <p>
-                        At ProDiet.com, we focus on making sure you register your 
-                        meals as quickly and easily as possible. Because the easier it 
-                        is for you, the more likely you are to stay on track and be successful in 
+                        At ProDiet.com, we focus on making sure you register your
+                        meals as quickly and easily as possible. Because the easier it
+                        is for you, the more likely you are to stay on track and be successful in
                         your weight loss goals.
                     </p>
                     <p>
@@ -101,7 +101,6 @@
                 </div>
             </div>
         </div>
-        
     </div>
 
     <!-- FOOTER -->
