--- a/html/contact.html
+++ b/html/contact.html
@@ -22,6 +22,7 @@
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin=""/>
     <title>Contact - Prodiet</title>
+    <link rel="icon" type="image/png" href="/img/favicon.ico"/>
 </head>
 <body>
     <!-- HEADER -->
