--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin=""/>
     <title>Home - Prodiet</title>
+    <link rel="icon" type="image/png" href="/img/favicon.ico"/>
 </head>
 <body>
     <!-- HEADER -->
